// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover styles should render popover on auto 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.4);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: #E6E6E6;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-7:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_12"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_11"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_11"
      class="circuit-3"
      id="popover_12"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="13"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="13"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover styles should render popover on bottom 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.4);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: #E6E6E6;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-7:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_22"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_21"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_21"
      class="circuit-3"
      id="popover_22"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="23"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="23"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover styles should render popover on left 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.4);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: #E6E6E6;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-7:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_27"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_26"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_26"
      class="circuit-3"
      id="popover_27"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="28"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="28"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover styles should render popover on right 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.4);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: #E6E6E6;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-7:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_32"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_31"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_31"
      class="circuit-3"
      id="popover_32"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="33"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="33"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover styles should render popover on top 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.4);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: #E6E6E6;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-7:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_17"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_16"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_16"
      class="circuit-3"
      id="popover_17"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="18"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="18"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover styles should render with closed styles 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.4);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

.circuit-2 {
  pointer-events: none;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  opacity: 0;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-4 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: #E6E6E6;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-7:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_7"
        aria-expanded="false"
        aria-haspopup="true"
        id="trigger_6"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_6"
      class="circuit-3"
      id="popover_7"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="8"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="8"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover styles should render with default styles 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.4);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: #E6E6E6;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-7:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_2"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_1"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_1"
      class="circuit-3"
      id="popover_2"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="3"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="3"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;
